añadido cp, dens vol y comienzo nuevas pruebas

--- a/biblio.bib
+++ b/biblio.bib
@@ -263,33 +263,16 @@ title = {Modelling Smart Wind Turbine Blades.},
 doi = {10.13140/2.1.1384.2720}
 }
 
-%viene una tabla del coeficiente de sustentacion
-@inproceedings{Brown2014,
-author = {Brown, Christine and Kunz, Robert and Kinzel, Michael and Lindau, Jules and Palacios, Jose and Brentner, Kenneth},
-year = {2014},
-month = {06},
-pages = {},
-title = {Large Eddy Simulation of Airfoil Ice Accretion Aerodynamics},
-isbn = {978-1-62410-291-2},
-doi = {10.2514/6.2014-2203}
-}
-
 
 %de donde realmente obtuve la tabla del lift coefficient
-
-@incollection{TIMMER2013109,
-title = {4 - Aerodynamic characteristics of wind turbine blade airfoils},
-editor = {Povl Brøndsted and Rogier P.L. Nijssen},
-booktitle = {Advances in Wind Turbine Blade Design and Materials},
-publisher = {Woodhead Publishing},
-pages = {109-149},
-year = {2013},
-series = {Woodhead Publishing Series in Energy},
-isbn = {978-0-85709-426-1},
-doi = {https://doi.org/10.1533/9780857097286.1.109},
-url = {https://www.sciencedirect.com/science/article/pii/B9780857094261500040},
-author = {W.A. Timmer and C. Bak},
-keywords = {wind turbine airfoil characteristics, high angles of attack, leading edge roughness, stall delay},
-abstract = {Abstract:
-This chapter focuses on airfoils for wind turbine blades and their characteristics. The use of panel codes such as XFOIL and RFOIL and CFD codes for the prediction of airfoil characteristics is briefly described. The chapter then discusses the requirements for wind turbine blade airfoils and the effect of leading edge roughness and Reynolds number. After a description of how airfoils can be tested the chapter discusses methods to represent airfoil characteristics at high angles of attack. A number of methods for correcting characteristics for the effect of three-dimensional flow on the blade are presented. The chapter then discusses ways to establish a data set for blade design and concludes with a view on future research in the field of wind turbine blade airfoils.}
+@article{johann2016,
+author = {Johann Dorfling  and Kamran Rokhsaz },
+title = {Integration of Airfoil Stall and Compressibility Models into a Propeller Blade Element Model},
+journal = {Journal of Aerospace Engineering},
+volume = {29},
+number = {4},
+pages = {04016014},
+year = {2016},
+doi = {10.1061/(ASCE)AS.1943-5525.0000607},
+abstract = { The blade element method is an indispensible engineering design tool. It executes rapidly on a personal computer and is capable of accurate propeller performance predictions. An extensive literature survey reveals that for conventional high-aspect ratio propeller blades lifting surface and computational fluid dynamics approaches add a large degree of complexity without providing significantly improved performance prediction capabilities as compared to the blade element/vortex theory. The accuracy of the blade element method is, however, highly dependent on the fidelity of the airfoil aerodynamic model. The primary focus of this paper is on presenting a nonlinear aerodynamic model of airfoils that can be used in combination with the blade element method for enhanced propeller performance prediction over a wide range of advance ratios. The proposed nonlinear airfoil model includes effects of angles of attack up to 90 degrees and compressibility corrections. Results of this method are validated against experimental measurements. Excellent agreement between experiment and prediction is shown for subsonic helical tip Mach numbers. }
 }
